<resources>
    <string name="app_name">School v1.0</string>
    <string name="strN1">Grade 1</string>
    <string name="str2">Grade 2</string>
    <string name="strCalc">Calculate</string>
    <string name="strM">Average</string>
    <string name="strSit">Status</string>
    <string name="strZero">0</string>
    <string name="srtSitAp">Approved</string>
    <string name="strSitRc">Retake Test</string>
    <string name="strSitRp">Disapproved</string>
    <string name="strMsgAp">Congratilations</string>
    <string name="strMsgRc">Study More !</string>
    <string name="strMsgRp">Please try again next year</string>
    <string name="strMsgErr">Type a number!</string>
</resources>
